[package]
name = "runer"
version = "0.1.0"
authors = ["Markus Hamacher <markush@duck.com>"]
description = "Runer - a simple project-scoped command hub and runner"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tabled = "0.15.0"
